<resources>
    <string name="app_name">Kotlin app</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="forecasts">Forecasts</string>
    <string name="fetch_weekly_forecast_error">Check internet connection and retry</string>
</resources>
